<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:gravity="center"/>
    <View
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:background="#45b6fe"/>



    <TextView
        android:id="@+id/yearOfRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:gravity="center"/>


    <TextView
        android:id="@+id/movieType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:gravity="center"/>


    <ImageView
        android:id="@+id/moviePosterImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/movie_poster"
        android:gravity="center"/>

</LinearLayout>
