<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/black"
    tools:context=".view.MainActivity"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_central1"
        android:textSize="30sp"
        android:textColor="#45b6fe"
        />

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="327dp"
        android:layout_height="43dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:hint="@string/ex_jaws"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_blue"

        android:text="@string/search1"

        android:textColor="@android:color/white"
        android:textColorLink="#3F51B5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Search"
            android:backgroundTint="@color/button_blue"
            android:layout_marginEnd="16dp"
            android:layout_margin="35dp"/>

        <Button
            android:id="@+id/favoritesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_blue"
            android:text="@string/favorites" />
    </LinearLayout>

</LinearLayout>
