<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activitiesFav"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.FavoritesActivity"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites1"
        android:textSize="25sp"
        >

    </TextView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favRecyclerView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/searchBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Search"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/button_blue"
            android:layout_margin="35dp"/>

        <Button
            android:id="@+id/favoritesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_blue"
            android:text="@string/favorites" />
    </LinearLayout>

</LinearLayout>